--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
         <div class="flex h-16 items-center justify-between">
           <div class="flex justify-items-start">
             <div class="flex-shrink-0">
-              <img class="h-8 w-8" src="assets/logo.png"
-                alt="Your Company">
+              <img class="h-8 w-8" src="assets/logo.png" alt="Your Company">
             </div>
 
           </div>
@@ -144,7 +143,8 @@
               class="block rounded-md px-3 py-2 text-base font-medium text-gray-400 hover:bg-gray-700 hover:text-white">
               Sign in</a>
             <a href="#"
-              class="block rounded-md px-3 py-2 text-base font-medium text-gray-400 hover:bg-gray-700 hover:text-white">Register Account</a>
+              class="block rounded-md px-3 py-2 text-base font-medium text-gray-400 hover:bg-gray-700 hover:text-white">Register
+              Account</a>
           </div>
         </div>
       </div>
@@ -159,9 +159,72 @@
     <main>
       <div class="mx-auto max-w-5xl py-10 sm:px-6 lg:px-8">
         <form>
+          <div class="space-y-12 pb-12">
+              <h2 class="text-base font-semibold leading-7 text-gray-900">Personal Information</h2>
+              <p class="mt-1 text-sm leading-6 text-gray-600">Use a permanent address where you can receive mail.</p>
+
+              <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
+                <div class="sm:col-span-3">
+                  <label for="first-name" class="block text-sm font-medium leading-6 text-gray-900">First name</label>
+                  <div class="mt-2">
+                    <input type="text" name="first-name" id="first-name" autocomplete="given-name"
+                      class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                  </div>
+                </div>
+
+                <div class="sm:col-span-3">
+                  <label for="last-name" class="block text-sm font-medium leading-6 text-gray-900">Last name</label>
+                  <div class="mt-2">
+                    <input type="text" name="last-name" id="last-name" autocomplete="family-name"
+                      class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                  </div>
+                </div>
+
+                <div class="sm:col-span-4">
+                  <label for="email" class="block text-sm font-medium leading-6 text-gray-900">Email address</label>
+                  <div class="mt-2">
+                    <input id="email" name="email" type="email" autocomplete="email"
+                      class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                  </div>
+                </div>
+                <div class="col-span-full">
+                  <label for="street-address" class="block text-sm font-medium leading-6 text-gray-900">Street
+                    address</label>
+                  <div class="mt-2">
+                    <input type="text" name="street-address" id="street-address" autocomplete="street-address"
+                      class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                  </div>
+                </div>
+
+                <div class="sm:col-span-2 sm:col-start-1">
+                  <label for="city" class="block text-sm font-medium leading-6 text-gray-900">City</label>
+                  <div class="mt-2">
+                    <input type="text" name="city" id="city" autocomplete="address-level2"
+                      class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                  </div>
+                </div>
+
+                <div class="sm:col-span-2">
+                  <label for="region" class="block text-sm font-medium leading-6 text-gray-900">State / Province</label>
+                  <div class="mt-2">
+                    <input type="text" name="region" id="region" autocomplete="address-level1"
+                      class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                  </div>
+                </div>
+
+                <div class="sm:col-span-2">
+                  <label for="postal-code" class="block text-sm font-medium leading-6 text-gray-900">ZIP / Postal
+                    code</label>
+                  <div class="mt-2">
+                    <input type="text" name="postal-code" id="postal-code" autocomplete="postal-code"
+                      class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                  </div>
+                </div>
+              </div>
+          </div>
+          <label for="comment" class="block text-sm font-medium leading-6 text-gray-900">Comment</label>
           <div class="w-full mb-4 border border-gray-200 rounded-lg bg-gray-50 dark:bg-gray-700 dark:border-gray-600">
             <div class="px-4 py-2 bg-white rounded-t-lg dark:bg-gray-800">
-              <label for="comment" class="sr-only">Your comment</label>
               <textarea id="comment" rows="4"
                 class="w-full px-0 text-sm text-gray-900 bg-white border-0 dark:bg-gray-800 dark:text-white dark:placeholder-gray-400 outline:none"
                 placeholder="Write a comment..." required></textarea>
@@ -205,7 +268,6 @@
         </form>
         <p class="ml-auto text-xs text-gray-500 dark:text-gray-400">Remember, contributions to this topic should follow
           our <a href="#" class="text-blue-600 dark:text-blue-500 hover:underline">Community Guidelines</a>.</p>
-
       </div>
 
       <div class="mx-auto max-w-5xl py-3 sm:px-6 lg:px-8">
