chore: modified banner, forms input, styling

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
     </div>
     <div class="flex flex-wrap items-center gap-x-4 gap-y-2">
       <p class="text-sm leading-6 text-gray-900">
-        <strong class="font-semibold">GhostMessage 2023</strong><svg viewBox="0 0 2 2"
+        <strong class="font-semibold">SuperStar</strong><svg viewBox="0 0 2 2"
           class="mx-2 inline h-0.5 w-0.5 fill-current" aria-hidden="true">
           <circle cx="1" cy="1" r="1" />
-        </svg>Thank you for all contributions to our project. We have just launched it !!!
+        </svg>Be a super star and get support with our application - FREE ADMIN FEE FOR 1 MONTH !
       </p>
       <a href="#"
         class="flex-none rounded-full bg-gray-900 px-3.5 py-1 text-sm font-semibold text-white shadow-sm hover:bg-gray-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-gray-900">Register
@@ -60,9 +60,7 @@
           </div>
           <div class="hidden md:block">
             <div class="ml-10 flex items-center space-x-4 ">
-              <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
               <div>
-
                 <a href="#" class="bg-gray-900 text-white rounded-md px-3 py-2 text-sm font-medium"
                   aria-current="page"><i class="far fa-comment-alt fa-sm"></i> Message</a>
               </div>
@@ -96,7 +94,6 @@
                   class="absolute transition ease-out duration-100 right-0 z-10 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none hidden"
                   role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1"
                   id="user-menu">
-                  <!-- Active: "bg-gray-100", Not Active: "" -->
                   <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1"
                     id="user-menu-item-0">Sign in</a>
                   <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1"
@@ -153,76 +150,80 @@
     <header class="bg-white shadow">
       <div class="mx-auto max-w-7xl px-4 py-6 sm:px-6 lg:px-8">
         <h1 class="text-3xl font-bold tracking-tight text-gray-900">Avicena's Dashboard</h1>
-        <h3 class="ml-auto text-md text-gray-500 dark:text-gray-400">Send secret message anonymously to Avicena.</h3>
+        <h3 class="ml-auto text-md text-gray-500 dark:text-gray-400">Support your favourite influencer with SuperStar !</h3>
       </div>
     </header>
     <main>
       <div class="mx-auto max-w-5xl py-10 sm:px-6 lg:px-8">
         <form>
           <div class="space-y-12 pb-12">
-              <h2 class="text-base font-semibold leading-7 text-gray-900">Personal Information</h2>
-              <p class="mt-1 text-sm leading-6 text-gray-600">Use a permanent address where you can receive mail.</p>
-
-              <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
-                <div class="sm:col-span-3">
-                  <label for="first-name" class="block text-sm font-medium leading-6 text-gray-900">First name</label>
-                  <div class="mt-2">
-                    <input type="text" name="first-name" id="first-name" autocomplete="given-name"
-                      class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-                  </div>
-                </div>
-
-                <div class="sm:col-span-3">
-                  <label for="last-name" class="block text-sm font-medium leading-6 text-gray-900">Last name</label>
-                  <div class="mt-2">
-                    <input type="text" name="last-name" id="last-name" autocomplete="family-name"
-                      class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-                  </div>
-                </div>
-
-                <div class="sm:col-span-4">
-                  <label for="email" class="block text-sm font-medium leading-6 text-gray-900">Email address</label>
-                  <div class="mt-2">
-                    <input id="email" name="email" type="email" autocomplete="email"
-                      class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-                  </div>
-                </div>
-                <div class="col-span-full">
-                  <label for="street-address" class="block text-sm font-medium leading-6 text-gray-900">Street
-                    address</label>
-                  <div class="mt-2">
-                    <input type="text" name="street-address" id="street-address" autocomplete="street-address"
-                      class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-                  </div>
-                </div>
-
-                <div class="sm:col-span-2 sm:col-start-1">
-                  <label for="city" class="block text-sm font-medium leading-6 text-gray-900">City</label>
-                  <div class="mt-2">
-                    <input type="text" name="city" id="city" autocomplete="address-level2"
-                      class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-                  </div>
-                </div>
-
-                <div class="sm:col-span-2">
-                  <label for="region" class="block text-sm font-medium leading-6 text-gray-900">State / Province</label>
-                  <div class="mt-2">
-                    <input type="text" name="region" id="region" autocomplete="address-level1"
-                      class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-                  </div>
-                </div>
-
-                <div class="sm:col-span-2">
-                  <label for="postal-code" class="block text-sm font-medium leading-6 text-gray-900">ZIP / Postal
-                    code</label>
-                  <div class="mt-2">
-                    <input type="text" name="postal-code" id="postal-code" autocomplete="postal-code"
-                      class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-                  </div>
+            <div class="col-span-full">
+              <label for="photo" class="text-base font-semibold leading-7 text-gray-900">Personal Information</label>
+              <div class="mt-2 flex items-center gap-x-3">
+                <img class="h-20 w-20 rounded-full border-2 border-gray-300" src="assets/profile.jpg">
+                <p class="mt-1 text-sm leading-6 text-gray-600">Hello, I'm Avicena - Your favourite Content Creator at
+                  YouTube. I appreciate all the donation. Thank you Nyaaaoo !</p>
+              </div>
+            </div>
+            <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
+              <div class="sm:col-span-3">
+                <label for="username" class="block text-sm font-medium leading-6 text-gray-900">Username *</label>
+                <div class="mt-2">
+                  <input type="text" name="first-name" id="first-name" autocomplete="given-name"
+                    class="px-2 py-2 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
                 </div>
               </div>
+              <div class="sm:col-span-3">
+                <label for="email-address" class="block text-sm font-medium leading-6 text-gray-900">Email
+                  address *</label>
+                <div class="mt-2">
+                  <input type="text" name="last-name" id="last-name" autocomplete="family-name"
+                    class="px-2 py-2 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                </div>
+              </div>
+              <div class="sm:col-span-3">
+                <label for="country" class="block text-sm font-medium leading-6 text-gray-900">Donation (Rp) *</label>
+                <div class="mt-2">
+                  <select id="country" name="country" autocomplete="country-name"
+                    class="px-2 py-2 block w-full rounded-md border-0 py-3 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:max-w-xs sm:text-sm sm:leading-6">
+                    <option>Rp. 10.000</option>
+                    <option>Rp. 25.000</option>
+                    <option>Rp. 50.000</option>
+                    <option>Rp. 100.000</option>
+                    <option>Rp. 200.000</option>
+                    <option>Rp. 500.000</option>
+                  </select>
+                </div>
+              </div>
+              <div class="sm:col-span-3">
+                <label for="country" class="block text-sm font-medium leading-6 text-gray-900">Payment Method *</label>
+                <div class="mt-2">
+                  <select id="country" name="country" autocomplete="country-name"
+                    class="px-2 py-2 block w-full rounded-md border-0 py-3 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:max-w-xs sm:text-sm sm:leading-6">
+                    <option>Bank Central Asia (BCA)</option>
+                    <option>BRI</option>
+                    <option>Bank Mandiri</option>
+                    <option>BSI</option>
+                    <option>CIMB NIAGA</option>
+                    <option>Bank Danamon</option>
+                    <option>Bank Jago</option>
+                    <option>Gopay</option>
+                    <option>OVO</option>
+                    <option>DANA</option>
+                  </select>
+                </div>
+              </div>
+              <div class="col-span-full">
+                <label for="street-address" class="block text-sm font-medium leading-6 text-gray-900">Media Share
+                  (Youtube Link)</label>
+                <div class="mt-2">
+                  <input type="text" name="street-address" id="street-address" autocomplete="street-address"
+                    class="px-2 py-2 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                </div>
+              </div>
+            </div>
           </div>
-          <label for="comment" class="block text-sm font-medium leading-6 text-gray-900">Comment</label>
+          <label for="comment" class="block text-sm font-medium leading-6 text-gray-900">Message</label>
           <div class="w-full mb-4 border border-gray-200 rounded-lg bg-gray-50 dark:bg-gray-700 dark:border-gray-600">
             <div class="px-4 py-2 bg-white rounded-t-lg dark:bg-gray-800">
               <textarea id="comment" rows="4"
@@ -232,7 +233,7 @@
             <div class="flex items-center justify-between px-3 py-2 border-t dark:border-gray-600">
               <button type="submit"
                 class="inline-flex items-center py-2.5 px-4 text-xs font-medium text-center text-white bg-blue-700 rounded-lg focus:ring-4 focus:ring-blue-200 dark:focus:ring-blue-900 hover:bg-blue-800">
-                Post comment
+                Donate
               </button>
               <div class="flex pl-0 space-x-1 sm:pl-2">
                 <button type="button"
