--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GhostMessage | Dashboard</title>
-  <link rel="icon" type="image/x-icon" href="assets/logo.png">
+  <title>SuperStar | Dashboard</title>
+  <link rel="icon" type="image/x-icon" href="assets/superstar.png">
   <link href="/dist/output.css" rel="stylesheet">
   <link href="index.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -54,7 +54,7 @@
         <div class="flex h-16 items-center justify-between">
           <div class="flex justify-items-start">
             <div class="flex-shrink-0">
-              <img class="h-8 w-8" src="assets/logo.png" alt="Your Company">
+              <img class="h-8 w-full" src="assets/superstar.png" alt="Your Company">
             </div>
 
           </div>
@@ -62,11 +62,11 @@
             <div class="ml-10 flex items-center space-x-4 ">
               <div>
                 <a href="#" class="bg-gray-900 text-white rounded-md px-3 py-2 text-sm font-medium"
-                  aria-current="page"><i class="far fa-comment-alt fa-sm"></i> Message</a>
+                  aria-current="page"><i class="far fa-comment-alt fa-sm"></i> Donate</a>
               </div>
               <a href="#"
                 class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium"><i
-                  class="fas fa-poll"></i> Polls</a>
+                  class="fas fa-poll"></i> Channel</a>
             </div>
           </div>
           <div class="hidden md:block">
@@ -150,7 +150,8 @@
     <header class="bg-white shadow">
       <div class="mx-auto max-w-7xl px-4 py-6 sm:px-6 lg:px-8">
         <h1 class="text-3xl font-bold tracking-tight text-gray-900">Avicena's Dashboard</h1>
-        <h3 class="ml-auto text-md text-gray-500 dark:text-gray-400">Support your favourite influencer with SuperStar !</h3>
+        <h3 class="ml-auto text-md text-gray-500 dark:text-gray-400">Support your favourite influencer with SuperStar !
+        </h3>
       </div>
     </header>
     <main>
@@ -169,7 +170,7 @@
               <div class="sm:col-span-3">
                 <label for="username" class="block text-sm font-medium leading-6 text-gray-900">Username *</label>
                 <div class="mt-2">
-                  <input type="text" name="first-name" id="first-name" autocomplete="given-name" required
+                  <input type="text" name="username" id="username" autocomplete="given-name" required
                     class="px-2 py-2 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
                 </div>
               </div>
@@ -270,16 +271,20 @@
         <p class="ml-auto text-xs text-gray-500 dark:text-gray-400">Remember, contributions to this topic should follow
           our <a href="#" class="text-blue-600 dark:text-blue-500 hover:underline">Community Guidelines</a>.</p>
       </div>
-
+      <div class="mx-auto max-w-5xl py-10 sm:px-6 lg:px-8">
+        <h1 class="text-3xl font-bold tracking-tight text-gray-900">History Donation</h1>
+      </div>
       <div class="mx-auto max-w-5xl py-3 sm:px-6 lg:px-8">
         <span class="max-w-5xl" id="comment-container"></span>
       </div>
     </main>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
-  <script src="/script/index.js"></script>
+  <script>var exports = {};</script>
+  <script type="module" src="/script/index.js"></script>
 </body>
 
 </html>
